--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                 <h3>Peliculas</h3>
             </article>
             <article id="series" onclick="SetSection('series-section')">
-                <img src="" alt="">
+                <img src="img/series.png"  alt="">
                 <h3>Series</h3>
             </article>
-            <article>
+            <article id="videogames" onclick="SetSection('videogames-section')">
                 <img src="img/videogames.png" alt="">
                 <h3>Videojuegos</h3>
             </article>
@@ -260,6 +260,172 @@
                         <img src="img/series/wuarriornun.jfif" class="movie-icon" alt="">
 
                         <a href="https://www.netflix.com/uy/title/80242724" target="_blank"><div class="play"></div></a>
+                    </div>
+                    <h2>Top 10</h2>
+                </article>
+            </div>
+            <div class="recomendations-section" id="movies-section">
+                <article>
+                    <div>
+                        <img src="img/movies/sumberland.jfif" class="movie-icon" alt="">
+
+                        <a href="https://www.netflix.com/uy/title/81220825?source=35" target="_blank"><div class="play"></div></a>
+                    </div>
+                    <h2>Top 1</h2>
+                </article>
+                <article>
+                    <div>
+                        <img src="img/movies/medieval.jpg" class="movie-icon" alt="">
+
+                        <a href="https://www.netflix.com/uy/title/81582615?source=35" target="_blank"><div class="play"></div></a>
+                    </div>
+                    <h2>Top 2</h2>
+                </article>
+                <article>
+                    <div>
+                        <img src="img/movies/pinocho.jfif" class="movie-icon" alt="">
+
+                        <a href="https://www.netflix.com/uy/title/80218455?source=35" target="_blank"><div class="play"></div></a>
+                    </div>
+                    <h2>Top 3</h2>
+                </article>
+                <article>
+                    <div>
+                        <img src="img/movies/troll.jfif" class="movie-icon" alt="">
+
+                        <a href="https://www.netflix.com/uy/title/81245455" target="_blank"><div class="play"></div></a>
+                    </div>
+                    <h2>Top 4</h2>
+                </article>
+                <article>
+                    <div>
+                        <img src="img/movies/rednotice.jfif" class="movie-icon" alt="">
+
+                        <a href="https://www.netflix.com/uy/title/81161626" target="_blank"><div class="play"></div></a>
+                    </div>
+                    <h2>Top 5</h2>
+                </article>
+                <article>
+                    <div>
+                        <img src="img/movies/garra.jfif" class="movie-icon" alt="">
+
+                        <a href="https://www.netflix.com/uy/title/80242342" target="_blank"><div class="play"></div></a>
+                    </div>
+                    <h2>Top 6</h2>
+                </article>
+                <article>
+                    <div>
+                        <img src="img/movies/laescuela.jfif" class="movie-icon" alt="">
+
+                        <a href="https://www.netflix.com/uy/title/80218885" target="_blank"><div class="play"></div></a>
+                    </div>
+                    <h2>Top 7</h2>
+                </article>
+                <article>
+                    <div>
+                        <img src="img/movies/host.jfif" class="movie-icon" alt="">
+
+                        <a href="https://www.netflix.com/uy/title/81374491" target="_blank"><div class="play"></div></a>
+                    </div>
+                    <h2>Top 8</h2>
+                </article>
+                <article>
+                    <div>
+                        <img src="img/movies/corazonesmalheridos.jfif" class="movie-icon" alt="">
+
+                        <a href="https://www.netflix.com/uy/title/81043665" target="_blank"><div class="play"></div></a>
+                    </div>
+                    <h2>Top 9</h2>
+                </article>
+                <article>
+                    <div>
+                        <img src="img/movies/enola.jpg" class="movie-icon" alt="">
+
+                        <a href="https://www.netflix.com/uy/title/81406219" target="_blank"><div class="play"></div></a>
+                    </div>
+                    <h2>Top 10</h2>
+                </article>
+            </div>
+
+
+            <div class="recomendations-section" id="videogames-section">
+                <article>
+                    <div>
+                        <img src="img/games/eldenring.jpg" class="movie-icon" alt="">
+
+                        <a href="https://es.bandainamcoent.eu/elden-ring/elden-ring" target="_blank"><div class="play"></div></a>
+                    </div>
+                    <h2>Top 1</h2>
+                </article>
+                <article>
+                    <div>
+                        <img src="img/games/horizon.jpg" class="movie-icon" alt="">
+
+                        <a href="https://www.playstation.com/es-uy/games/horizon-forbidden-west/" target="_blank"><div class="play"></div></a>
+                    </div>
+                    <h2>Top 2</h2>
+                </article>
+                <article>
+                    <div>
+                        <img src="img/games/dying.jfif" class="movie-icon" alt="">
+
+                        <a href="https://store.steampowered.com/agecheck/app/534380/" target="_blank"><div class="play"></div></a>
+                    </div>
+                    <h2>Top 3</h2>
+                </article>
+                <article>
+                    <div>
+                        <img src="img/games/godofwar.webp" class="movie-icon" alt="">
+
+                        <a href="https://www.playstation.com/es-uy/games/god-of-war-ragnarok/" target="_blank"><div class="play"></div></a>
+                    </div>
+                    <h2>Top 4</h2>
+                </article>
+                <article>
+                    <div>
+                        <img src="img/games/bayonetta.jpg" class="movie-icon" alt="">
+
+                        <a href="https://www.nintendo.com/es-mx/store/products/bayonetta-3-switch/" target="_blank"><div class="play"></div></a>
+                    </div>
+                    <h2>Top 5</h2>
+                </article>
+                <article>
+                    <div>
+                        <img src="img/games/stray.webp" class="movie-icon" alt="">
+
+                        <a href="https://store.steampowered.com/app/1332010/Stray/?l=spanish" target="_blank"><div class="play"></div></a>
+                    </div>
+                    <h2>Top 6</h2>
+                </article>
+                <article>
+                    <div>
+                        <img src="img/games/aplague.jfif" class="movie-icon" alt="">
+
+                        <a href="https://store.steampowered.com/app/1182900/A_Plague_Tale_Requiem/" target="_blank"><div class="play"></div></a>
+                    </div>
+                    <h2>Top 7</h2>
+                </article>
+                <article>
+                    <div>
+                        <img src="img/games/tortugas.webp" class="movie-icon" alt="">
+
+                        <a href="https://store.steampowered.com/app/1361510/Teenage_Mutant_Ninja_Turtles_Shredders_Revenge/" target="_blank"><div class="play"></div></a>
+                    </div>
+                    <h2>Top 8</h2>
+                </article>
+                <article>
+                    <div>
+                        <img src="img/games/gotam.jpg" class="movie-icon" alt="">
+
+                        <a href="https://www.gothamknightsgame.com/es-es" target="_blank"><div class="play"></div></a>
+                    </div>
+                    <h2>Top 9</h2>
+                </article>
+                <article>
+                    <div>
+                        <img src="img/games/marvel.jfif" class="movie-icon" alt="">
+
+                        <a href="https://midnightsuns.2k.com" target="_blank"><div class="play"></div></a>
                     </div>
                     <h2>Top 10</h2>
                 </article>
