--- a/index.html
+++ b/index.html
@@ -36,68 +36,35 @@
         <div>
             <div class="recomendations-section" id="music-section">
                 <article>
-                    <iframe style="border-radius:12px"
-                        src="https://open.spotify.com/embed/track/7MkylDYvKTSuWgrsBhHlsG?utm_source=generator&theme=0"
-                        width="100%" height="352" frameBorder="0" allowfullscreen=""
-                        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-                        loading="lazy"></iframe>
+                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/5ww2BF9slyYgNOk37BlC4u?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                     <h2>Top 1</h2>
                 </article>
-                <article><iframe style="border-radius:12px"
-                        src="https://open.spotify.com/embed/track/5ww2BF9slyYgNOk37BlC4u?utm_source=generator&theme=0"
-                        width="100%" height="352" frameBorder="0" allowfullscreen=""
-                        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-                        loading="lazy"></iframe>
+                <article><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0oBtwScT4B4BR5kZitNWd5?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                     <h2>Top 2</h2>
                 </article>
-                <article><iframe style="border-radius:12px"
-                        src="https://open.spotify.com/embed/track/2tTmW7RDtMQtBk7m2rYeSw?utm_source=generator&theme=0"
-                        width="100%" height="352" frameBorder="0" allowfullscreen=""
-                        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-                        loading="lazy"></iframe>
+                <article><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2tTmW7RDtMQtBk7m2rYeSw?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                     <h2>Top 3</h2>
                 </article>
-                <article><iframe style="border-radius:12px"
-                        src="https://open.spotify.com/embed/track/45dlaEXrXW47TVbrQ4gK7E?utm_source=generator"
-                        width="100%" height="352" frameBorder="0" allowfullscreen=""
-                        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-                        loading="lazy"></iframe>
+                <article><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/1zsPaEkglFvxjAhrM8yhpr?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                     <h2>Top 4</h2>
                 </article>
-                <article><iframe style="border-radius:12px"
-                        src="https://open.spotify.com/embed/track/1zsPaEkglFvxjAhrM8yhpr?utm_source=generator"
-                        width="100%" height="352" frameBorder="0" allowfullscreen=""
-                        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-                        loading="lazy"></iframe>
+                <article><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0W3TCDzYM7xFrZSaXnQvs4?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                     <h2>Top 5</h2>
                 </article>
-                <article><iframe style="border-radius:12px"
-                        src="https://open.spotify.com/embed/track/53tfEupEzQRtVFOeZvk7xq?utm_source=generator"
-                        width="100%" height="352" frameBorder="0" allowfullscreen=""
-                        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-                        loading="lazy"></iframe>
+                <article><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/45dlaEXrXW47TVbrQ4gK7E?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                     <h2>Top 6</h2>
                 </article>
-                <article><iframe style="border-radius:12px"
-                        src="https://open.spotify.com/embed/track/0W3TCDzYM7xFrZSaXnQvs4?utm_source=generator"
-                        width="100%" height="352" frameBorder="0" allowfullscreen=""
-                        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-                        loading="lazy"></iframe>
+                <article><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/4qXWX3OmEKp0YCnnxJqTMO?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                     <h2>Top 7</h2>
                 </article>
-                <article><iframe style="border-radius:12px"
-                        src="https://open.spotify.com/embed/track/4qXWX3OmEKp0YCnnxJqTMO?utm_source=generator"
-                        width="100%" height="352" frameBorder="0" allowfullscreen=""
-                        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-                        loading="lazy"></iframe>
+                <article><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/53tfEupEzQRtVFOeZvk7xq?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                     <h2>Top 8</h2>
                 </article>
-                <article><iframe style="border-radius:12px"
-                        src="https://open.spotify.com/embed/track/60DHrnRAhNJMy4WeEf23NH?utm_source=generator"
-                        width="100%" height="352" frameBorder="0" allowfullscreen=""
-                        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-                        loading="lazy"></iframe>
+                <article><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/7iwJOi3hlMqZt6pj1sQOBj?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                     <h2>Top 9</h2>
+                </article>
+                <article><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/60DHrnRAhNJMy4WeEf23NH?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    <h2>Top 10</h2>
                 </article>
             </div>
             <div class="recomendations-section" id="movies-section">
@@ -351,9 +318,6 @@
 
     </section>
 
-    <!-- <footer>
-        <h2>¡Gracias por apoyarnos!</h2>
-    </footer> -->
 
     <script src="js/index.js"></script>
 </body>
